# cleo-mini-v3

./: .env.example  .gitignore  BACKUP.md  CLAUDE.md  dev.sh  pyproject.toml
brands/: SCRAPER_CHECKLIST.md  coordinates.py  geocodio_client.py  match.py  proximity.py  run.py
brands/scrapers/: aw.py  base.py  boston_pizza.py  dairy_queen.py  dealerrater.py  dollar_tree.py  dollarama.py  dominos.py  esso.py  farm_boy.py  food_basics.py  freshco.py  giant_tiger.py  goodwill.py  indigo.py  journie.py  jysk.py  lcbo.py  loblaw_digital.py  longos.py  mary_browns.py  mcdonalds.py  mr_sub.py  petsmart.py  pita_pit.py  pizza_hut.py  pizza_pizza.py  rbi.py  recipe_unlimited.py  rens_pets.py  st_louis.py  starbucks.py  storelocate.py  sunset_grill.py  taco_bell.py  teppermans.py  the_brick.py  wild_wing.py  yext_directory.py
cleo/: cli.py  config.py  versioning.py
cleo/extract/: address_expander.py  engine.py  versioning.py
cleo/footprints/: __init__.py  enrichment.py  ingest.py  matcher.py  osm_enrich.py  spatial.py
cleo/geocode/: cache.py  client.py  collector.py  geocodio_client.py  here_client.py  index.py  runner.py  store.py  unified_collector.py
cleo/geowarehouse/: address.py  engine.py  ingest.py  match.py  parser.py
docs/: address-normalization-strategy.md  ontario-municipalities.md  shadcn-migration-plan.md  strategy-2026-02-25.md  system-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build_markets.py  download_logos.py  full_scan.py  party_signal_analysis.py  run_overnight_scan.sh
(+186 files in other folders)
