[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-mini"
version = "3.0.0"
description = "Realtrack.com transaction data ingestion and search"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
cleo = "cleo.cli:main"

[tool.setuptools.packages.find]
include = ["cleo*"]
